# test-harness

./: .gitignore  AGENTS.md  AGENTS.zh-CN.md  Cargo.toml  README.md  README.zh-CN.md  mvp-seed-harness-design.md  mvp-seed-harness-design.zh-CN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-harness-design.zh-CN.md  tsconfig.json  vite.config.ts
.agents/skills/harness-add-feature/: SKILL.md
.agents/skills/harness-onboard-project/: SKILL.md
.agents/skills/harness-promise-authoring/: SKILL.md
.agents/skills/harness-troubleshoot/: SKILL.md
.claude/: launch.json
.github/workflows/: ci.yml  quality-gates.yml
apps/cli/: README.md  README.zh-CN.md  package.json  tsconfig.json  vite.config.ts
apps/cli/src/: index.ts
apps/cli/tests/: index.test.ts
apps/web/: components.json  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: index.css  main.tsx  router.tsx  test-setup.ts
apps/web/src/lib/: api.ts  (+5 more)
bridges/rust/cucumber-rs/: Cargo.toml
bridges/rust/cucumber-rs/src/: lib.rs
bridges/rust/cucumber-rs/tests/: rust_cucumber_bridge.rs
bridges/typescript/cucumber-js/: package.json  tsconfig.json
crates/harness-adapter-runtime/: Cargo.toml
crates/harness-adapter-runtime/src/: lib.rs  main.rs
crates/harness-adapter-rust/: Cargo.toml
crates/harness-adapter-rust/src/: lib.rs  main.rs
crates/harness-adapter-rust/tests/: adapter.rs
crates/harness-cli/: Cargo.toml
crates/harness-cli/src/: lib.rs  main.rs  studio.rs
crates/harness-core/: Cargo.toml
crates/harness-core/src/: config.rs  errors.rs  fs_utils.rs  lib.rs  module_registry.rs  programs.rs  promise_registry.rs  report.rs  results.rs  validation.rs
crates/harness-daemon/: Cargo.toml
crates/harness-daemon/src/: lib.rs  main.rs
crates/harness-project/: Cargo.toml
crates/harness-project/src/: errors.rs  feature_registry.rs  feature_report.rs  lib.rs  localized_text.rs  module_registry.rs  programs.rs  results.rs  validation.rs
crates/harness-protocol/: Cargo.toml
crates/harness-protocol/src/: lib.rs
crates/harness-protocol/tests/: conformance.rs
crates/harness-runner/: Cargo.toml
docs/design/: dashboard-canvas-experience.md  dashboard-canvas-experience.zh-CN.md  harness-daemon-runtime-control-plane.md  harness-daemon-runtime-control-plane.zh-CN.md  local-daemon-studio-connection.md  local-daemon-studio-connection.zh-CN.md  mvp-seed-harness-design.md  mvp-seed-harness-design.zh-CN.md  promise-review-workbench-optimized.html  studio-package-regions.html  studio-package-tier-drilldown.html  studio-playground-mockup-v2.html  studio-playground-mockup.html  test-harness-design.md  test-harness-design.zh-CN.md  why-test-harness.md  why-test-harness.zh-CN.md
docs/plans/: cucumber-bdd-rewrite-plan.md  cucumber-bdd-rewrite-plan.zh-CN.md  harness-test-orchestrator-plan.md  harness-test-orchestrator-plan.zh-CN.md  rust-rewrite-plan.md  rust-rewrite-plan.zh-CN.md  vitest-result-collector-plan.md  vitest-result-collector-plan.zh-CN.md
docs/protocol/: language-agnostic-protocol.md  language-agnostic-protocol.zh-CN.md
examples/todo-backend/: README.md  README.zh-CN.md  harness-feature-map.yaml  harness.yaml  implementations.yaml
examples/todo-backend/implementations/rust-axum/: Cargo.toml
examples/todo-backend/implementations/rust-axum/src/: lib.rs  main.rs
examples/todo-backend/implementations/rust-axum/tests/: rust_axum_cucumber.rs
modules/: cli.module.yaml  module-registry.module.yaml  promise-registry.module.yaml  promise-schema.module.yaml  protocol.module.yaml  report.module.yaml  results-schema.module.yaml  validation.module.yaml  vitest-adapter.module.yaml
promises/adapter-runtime/: adapter-runtime.promises.yaml
promises/cli/: check.promise.yaml  cli.promises.yaml  report-summary.promise.yaml  report.promise.yaml  test-orchestrator.promise.yaml
promises/module-registry/: load-canonical-yaml-modules.promise.yaml  module-registry.promises.yaml
promises/promise-registry/: load-canonical-yaml-promises.promise.yaml  promise-registry.promises.yaml
promises/promise-schema/: promise-schema.promises.yaml  required-fields.promise.yaml
promises/protocol/: cli-contract.promise.yaml  conformance-fixtures.promise.yaml  promise-files-are-versioned.promise.yaml  protocol.promises.yaml  results-are-versioned.promise.yaml  schemas-define-language-agnostic-contract.promise.yaml
promises/report/: language-fallback.promise.yaml  language.promise.yaml  report.promises.yaml  run-status-computation.promise.yaml
promises/result-collector/: explicit-root.promise.yaml
promises/results-schema/: required-fields.promise.yaml  results-schema.promises.yaml
promises/scenario-helper/: binds-tests.promise.yaml
promises/test-harness/: promise-registry.promise.yaml  result-collector.promise.yaml  scenario-helper.promise.yaml
promises/validation/: default-language-required.promise.yaml  readability.promise.yaml  scenario-binding-coverage.promise.yaml  source-file-coverage.promise.yaml  test-result-coverage.promise.yaml  validation.promises.yaml
protocol/v1/: adapter-event.schema.yaml  behavior.schema.yaml  bridge-event.schema.yaml  cli.yaml  harness-config.schema.yaml  locales.schema.yaml  module.schema.yaml  modules.schema.yaml  packages.schema.yaml  promise.schema.yaml  promises-file.schema.yaml  report.schema.yaml  results.schema.yaml  review-log.schema.yaml
skills/harness-add-feature/: SKILL.md
skills/harness-author-bdd/: SKILL.md  SKILL.zh-CN.md
skills/harness-onboard-project/: SKILL.md
skills/harness-promise-authoring/: SKILL.md
skills/harness-studio-theme/: SKILL.md  SKILL.zh-CN.md
skills/harness-troubleshoot/: SKILL.md
tests/: harness.behavior.yaml  harness.modules.yaml  harness.packages.yaml  harness.review-log.yaml  harness.yaml
tests/fixtures/: promise-fixtures.ts
tests/modules/: adapter-runtime.module.yaml  cli.module.yaml  harness-daemon.module.yaml  module-registry.module.yaml  promise-registry.module.yaml  report.module.yaml  results-schema.module.yaml  rust-adapter.module.yaml  validation.module.yaml  web-dashboard.module.yaml
(+271 files in other folders)
