[workspace]
members = [
  "crates/harness-protocol",
  "crates/harness-core",
  "crates/harness-cli",
  "crates/harness-adapter-runtime",
  "crates/harness-adapter-rust",
  "examples/todo-backend/implementations/rust-axum",
]
resolver = "2"

[workspace.package]
authors = ["xinyao <hi@xinyao.me>"]
edition = "2021"
license = "MIT"
version = "0.0.0"

[workspace.dependencies]
jsonschema = { version = "0.46.5", default-features = false }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
walkdir = "2"
