[workspace]
members = [
  "crates/harness-protocol",
  "crates/harness-project",
  "crates/harness-runner",
  "crates/harness-cli",
  "crates/harness-daemon",
  "bridges/rust/cucumber-rs",
  "examples/todo-backend/implementations/rust-axum",
]
resolver = "2"

[workspace.package]
authors = ["xinyao <hi@xinyao.me>"]
edition = "2021"
license = "MIT"
version = "0.0.0"

[workspace.dependencies]
cucumber = "0.23.0"
gherkin = "0.16.0"
axum = { version = "0.8.9", default-features = false, features = [
  "form",
  "http1",
  "json",
  "matched-path",
  "original-uri",
  "query",
  "tokio",
  "tower-log",
  "tracing",
  "ws",
] }
portable-pty = "0.9"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tower-http = { version = "0.6.11", features = ["cors"] }
ureq = { version = "2.10", default-features = false, features = ["json", "tls"] }
walkdir = "2"
