[package]
name = "harness-adapter-runtime"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
harness-core = { path = "../harness-core" }
harness-protocol = { path = "../harness-protocol" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
