[package]
name = "harness-cli"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
harness-core = { path = "../harness-core" }
harness-protocol = { path = "../harness-protocol" }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
harness-adapter-rust = { path = "../harness-adapter-rust" }
tempfile.workspace = true
