[package]
name = "harness-cli"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
harness-project = { path = "../harness-project" }
harness-runner = { path = "../harness-runner" }
harness-protocol = { path = "../harness-protocol" }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
ureq = { workspace = true }
