[package]
name = "harness-core"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
harness-protocol = { path = "../harness-protocol" }
regex.workspace = true
serde.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
