[package]
name = "harness-daemon"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
harness-core = { path = "../harness-core" }
harness-protocol = { path = "../harness-protocol" }
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true

[dev-dependencies]
harness-adapter-rust = { path = "../harness-adapter-rust" }
serde_json.workspace = true
tempfile.workspace = true
