[package]
name = "harness-daemon"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
harness-cli = { path = "../harness-cli" }
harness-project = { path = "../harness-project" }
harness-protocol = { path = "../harness-protocol" }
portable-pty.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio.workspace = true
tower-http.workspace = true
