[package]
name = "todo-backend-rust-axum"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum = "0.8"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
cucumber.workspace = true
harness-cucumber-rs = { path = "../../../../bridges/rust/cucumber-rs" }
tower = { version = "0.5", features = ["util"] }

[[test]]
name = "rust_axum_cucumber"
harness = false
